--- a/LoanApp/Loan.Master
+++ b/LoanApp/Loan.Master
@@ -13,10 +13,24 @@
 </head>
 <body>
     <form id="form1" runat="server">
-        <div>
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
-        </div>
+        <table>
+            <tr>
+                <td style="width: fit-content">
+                    <lon:MyHeader runat="server" />
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                    </asp:ContentPlaceHolder>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <lon:MyFooter runat="server" />
+                </td>
+            </tr>
+        </table>
     </form>
 </body>
 </html>
